Visual bug fix - align center

--- a/styles/index.css
+++ b/styles/index.css
@@ -26,6 +26,8 @@ div.main-wrapper{
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    padding-bottom: 65px;
 }
 
 div.main-title{
